syntax = "proto3";
option go_package = ".";

service PriceService{
  rpc GetPrices(GetPricesRequest) returns(stream GetPricesResponse);
}

message GetPricesRequest{}

message GetPricesResponse{
  repeated Price prices = 1;
}

message Price{
  string Name = 1;
  float SellingPrice = 2;
  float PurchasePrice = 3;
}